--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
     "@mui/material": "^5.15.0",
+    "@vis.gl/react-google-maps": "^0.4.2",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
