--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-loading": "^2.0.3",
     "tailwind-scrollbar-hide": "^1.1.7"
   },
   "devDependencies": {
